Compiler/tests/good/Loops/02_loops.rs
fn main(){  
    let x : bool = false;
    
    while x && true{
        println!(x);
    }
    
    return;
}
