Compiler/tests/bad/Ifs/03_ifs.rs
// unmatched else if condition

fn main(){
    let x:bool = false;
    if x || false{
        println!(x);
    } else {
        else if {
            println!(23);
        }
    }
}